--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development",
     "sass": "sass --watch sass/main.scss css/main.css",
     "sassTest": "sass --watch sass:css"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sass": "^1.32.7"
+    "css-loader": "^5.1.1",
+    "file-loader": "^6.2.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.7",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0"
   }
 }
